@@ -3,6 +3,7 @@
   - image spoiler revealer
   - optional auto noko
   - fix options centering on Opera
+  - fix append '#watch' only when auto watch is enabled
 - aeosynth:
   - keep options dialog at constant size
   - drop firefox 3.6 support (again...)
